--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li class="link"><a href="#References">My favorite books</a></li>
         <li class="link"><a href="#Mywork">My work</a></li>
         <li class="link"><a href="#MyInspiration">Inspiration</a></li>
-        <li class="link">Contact</li>
+        <li class="link"><a href="#contact">Contact</li>
     </ul>
     <section id="welcome">
         <img src="kid.jpg">
@@ -74,7 +74,7 @@
 
             <a href="mailto:someone@example.com?Subject=Hello">
                 <!-- Use Font awesome class to show the envelope icon : fa fa-envelope-->
-                <i class=""></i>&nbsp;&nbsp;<h3>mygmailid@gmail.com</h3>
+                <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>mygmailid@gmail.com</h3>
             </a>
 
             <br>
@@ -82,7 +82,7 @@
 
             <a href="#">
                  <!-- Use Font awesome class to show the instagram icon : fa fa-instagram-->
-                <i class=""></i>&nbsp;&nbsp;<h3>myinstagramid</h3>
+                <i class="fa fa-instagram"></i>&nbsp;&nbsp;<h3>myinstagramid</h3>
             </a>
 
         </div>
